--- a/src/ui/main_menu_window.ui
+++ b/src/ui/main_menu_window.ui
@@ -21,6 +21,9 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>6</number>
+    </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -39,13 +42,13 @@
        <string notr="true"/>
       </property>
       <property name="frameShape">
-       <enum>QFrame::Box</enum>
+       <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow">
-       <enum>QFrame::Sunken</enum>
+       <enum>QFrame::Plain</enum>
       </property>
       <property name="lineWidth">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="currentIndex">
        <number>0</number>
@@ -60,114 +63,69 @@
              <string notr="true">font: 63 16pt &quot;URW Gothic L&quot;;</string>
             </property>
             <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:26pt; color:#729fcf;&quot;&gt;   HOME PLANNER 2D&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:26pt; font-weight:600; color:#14248c;&quot;&gt;HOME PLANNER 2D&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="Line" name="line">
+           <widget class="Line" name="lineHorizontal">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizLayoutBottom" stretch="2,1">
+           <layout class="QHBoxLayout" name="horizLayoutMiddle" stretch="2,1">
             <property name="sizeConstraint">
              <enum>QLayout::SetFixedSize</enum>
             </property>
             <item>
-             <widget class="QLabel" name="lblPic">
-              <property name="font">
-               <font>
-                <weight>75</weight>
-                <italic>true</italic>
-                <bold>true</bold>
-                <underline>false</underline>
-                <strikeout>false</strikeout>
-                <stylestrategy>PreferDefault</stylestrategy>
-                <kerning>true</kerning>
-               </font>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(233, 185, 110);</string>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
               </property>
-              <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:36pt; color:#eeeeec;&quot;&gt;Picture will be placed here&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-              <property name="scaledContents">
-               <bool>false</bool>
-              </property>
-              <property name="wordWrap">
-               <bool>true</bool>
-              </property>
-              <property name="openExternalLinks">
-               <bool>false</bool>
-              </property>
-             </widget>
+             </spacer>
             </item>
             <item>
-             <layout class="QVBoxLayout" name="vertLayoutRight" stretch="1,5,1">
+             <layout class="QVBoxLayout" name="vertLayoutRight" stretch="2,2,1">
               <item>
                <spacer name="vertSpacerTop">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
                 </property>
-                <property name="sizeType">
-                 <enum>QSizePolicy::Expanding</enum>
-                </property>
                 <property name="sizeHint" stdset="0">
                  <size>
                   <width>20</width>
-                  <height>100</height>
+                  <height>0</height>
                  </size>
                 </property>
                </spacer>
               </item>
               <item>
-               <layout class="QGridLayout" name="gridButtons">
+               <layout class="QVBoxLayout" name="vertLayoutButtons">
+                <property name="spacing">
+                 <number>20</number>
+                </property>
                 <property name="leftMargin">
                  <number>30</number>
                 </property>
                 <property name="rightMargin">
                  <number>30</number>
                 </property>
-                <property name="verticalSpacing">
-                 <number>15</number>
-                </property>
-                <item row="4" column="0">
-                 <widget class="QPushButton" name="btnQuit">
-                  <property name="cursor">
-                   <cursorShape>PointingHandCursor</cursorShape>
-                  </property>
-                  <property name="text">
-                   <string>Quit</string>
-                  </property>
-                  <property name="flat">
-                   <bool>false</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <widget class="QPushButton" name="btnInstructions">
-                  <property name="cursor">
-                   <cursorShape>PointingHandCursor</cursorShape>
-                  </property>
-                  <property name="text">
-                   <string>Instructions</string>
-                  </property>
-                  <property name="flat">
-                   <bool>false</bool>
-                  </property>
-                 </widget>
-                </item>
-                <item row="0" column="0">
+                <item>
                  <widget class="QPushButton" name="btnCreateNew">
                   <property name="cursor">
                    <cursorShape>PointingHandCursor</cursorShape>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">color: #14248c;
+font-weight: bold;</string>
                   </property>
                   <property name="text">
                    <string>Create New</string>
@@ -177,7 +135,24 @@
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="0">
+                <item>
+                 <widget class="QPushButton" name="btnInstructions">
+                  <property name="cursor">
+                   <cursorShape>PointingHandCursor</cursorShape>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">color: #14248c;
+font-weight: bold;</string>
+                  </property>
+                  <property name="text">
+                   <string>Instructions</string>
+                  </property>
+                  <property name="flat">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
                  <widget class="QPushButton" name="btnAbout">
                   <property name="enabled">
                    <bool>true</bool>
@@ -186,10 +161,28 @@
                    <cursorShape>PointingHandCursor</cursorShape>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true"/>
+                   <string notr="true">color: #14248c;
+font-weight: bold;</string>
                   </property>
                   <property name="text">
                    <string>About</string>
+                  </property>
+                  <property name="flat">
+                   <bool>false</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="btnQuit">
+                  <property name="cursor">
+                   <cursorShape>PointingHandCursor</cursorShape>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">color: #14248c;
+font-weight: bold;</string>
+                  </property>
+                  <property name="text">
+                   <string>Quit</string>
                   </property>
                   <property name="flat">
                    <bool>false</bool>
@@ -217,9 +210,68 @@
           </item>
          </layout>
         </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizLayoutBottom" stretch="10,0,1">
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <spacer name="horizSpacerBottomLeft">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>37</width>
+              <height>17</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btnQt">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#btnQt {
+background-color: transparent;
+border-image: url(:/img/qt_logo.png);
+width: 40px;
+height: 40px;
+background: none;
+background-repeat: none;
+}</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizSpacerBottomRight">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="page2">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(239, 239, 239);</string>
+       </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QPushButton" name="btnBack">
@@ -246,8 +298,8 @@ border-radius: 10px;
            <string>Back</string>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>:/img/back-icon.png</normaloff>:/img/back-icon.png</iconset>
+           <iconset resource="../resources.qrc">
+            <normaloff>:/img/back_icon.png</normaloff>:/img/back_icon.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -361,6 +413,8 @@ border-radius: 10px;
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
